--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+Cerberus==1.3.2
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+SQLAlchemy==1.4.4
 aiocontextvars==0.2.2
 aiofiles==0.4.0
 aiohttp==3.7.3
@@ -16,7 +20,6 @@ bcrypt==3.1.7
 biopython==1.76
 black==19.10b0
 cchardet==2.1.6
-Cerberus==1.3.2
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
@@ -35,14 +38,12 @@ fastdiff==0.2.0
 greenlet==1.0.0
 hiredis==1.0.1
 humanfriendly==8.1
-idna==2.10
 idna-ssl==1.1.0
+idna==2.10
 immutables==0.11
 importlib-metadata==1.6.0
 isodate==0.6.0
 jdcal==1.4.1
-Jinja2==2.11.2
-MarkupSafe==1.1.1
 more-itertools==8.3.0
 motor==2.1.0
 msrest==0.6.19
@@ -58,22 +59,22 @@ py==1.8.1
 pycparser==2.20
 pymongo==3.10.1
 pyparsing==2.4.7
-pytest==5.4.2
 pytest-aiohttp==0.3.0
 pytest-cov==2.8.1
 pytest-forked==1.1.3
 pytest-mock==3.1.0
+pytest-regressions==2.2.0
 pytest-repeat==0.9.1
 pytest-xdist==1.32.0
+pytest==5.4.2
 python-dateutil==2.8.1
 regex==2020.4.4
-requests==2.24.0
 requests-oauthlib==1.3.0
+requests==2.24.0
 semver==2.9.1
 sentry-sdk==1.0.0
 six==1.15.0
 snapshottest==0.5.1
-SQLAlchemy==1.4.4
 termcolor==1.1.0
 toml==0.10.0
 typed-ast==1.4.1
